Fix scrollbar

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -14,12 +14,14 @@
 
 .timeline-wrapper::-webkit-scrollbar-track {
   background-color: #0000003b;
-  border-radius:0 0 1rem 1rem;
+  border-radius:1rem 1rem 1rem 1rem;
+  margin-left:.5rem;
+  margin-right:.5rem;
 }
 
 .timeline-wrapper::-webkit-scrollbar-thumb {
   background: #434667;
-  border-radius:0 0 1rem 1rem;
+  border-radius:1rem 1rem 1rem 1rem;
   width: 80%;
 }
 
